--- a/index-vero.html
+++ b/index-vero.html
@@ -15,6 +15,8 @@
 </head>
 <body>
     <div class="home page">
+
+        <!-- Menu (Nav) -->
         <nav class="home__menu">
             <h4 class="menu__logo">Portfo<span class="color-text">lio</span></h4>
 
@@ -29,17 +31,27 @@
             </div>
         </nav>
 
+        <!-- Home Content -->
         <div class="home__content">
             <div class="content__container">
-                <h6 class="content__1">Hello, my name is</h6>
-
-                <h2 class="content__2">Pierluigi Bertoli</h2>
-    
-                <h5 class="content__3">I'm a Web Developer</h5>    
+                <span>Hi, my name is</span>
+                <span>Pierluigi Bertoli</span>
+                <span>I'm a Web Developer</span>
             </div>
         </div>
 
+        <!-- Home Skill List  -->
+        <div class="home__skill-list">
 
+        </div>
+
+        <!-- Feedback Form Button -->
+        <div class="form">
+            <img src="assets/icons/form-icon.svg" alt="">
+            <div>
+
+            </div>
+        </div>
     </div>
 
     <div class="page">
