--- a/index.html
+++ b/index.html
@@ -1,53 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio</title>
-        <link rel="stylesheet" href="assets/css/style.css">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
 
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    </head>
+<body>
+    <div class="home page">
 
-    <body>
-        <!-- Home Page -->
-        <div class="page">
-            <nav class="menu">
-                <h4 class="menu__logo">Portfo<span>lio</span></h4>
+        <nav class="menu">
+            <div class="menu__logo">Portfo<span>lio</span></div>
 
-                <div class="menu__dropdown">
-                    <span class="menu__title">Menu</span>
-                    <ul class="menu__list">
-                        <li class="menu__item"><a href="#">Home</a></li>
-                        <li class="menu__item"><a href="#">About</a></li>
-                        <li class="menu__item"><a href="#">Portfolio</a></li>
-                    </ul>
-                </div>
-            </nav>
+            <div class="menu__dropdown">
+                <span class="dropdown__title">MENU</span>
 
-            <div class="content">
-                <h6>Hello, my name is</h6>
+                <ul class="dropdown__list">
+                    <li class="dropdown__item"><a href="#">Home</a></li>
+                    <li class="dropdown__item"><a href="#">About</a></li>
+                    <li class="dropdown__item"><a href="#">Portfolio</a></li>
+                    <li class="dropdown__item"><a href="#">Contacts</a></li>
+                </ul>
+            </div>
+        </nav>
 
-                <h1>Pierluigi Bertoli</h1>
+        <div class="menu__dummy"></div>
 
-                <h5>I'm a Web Developer</h5>
+        <div class="home__content">
+            <div class="content__container">
+                <div class="content__1">Hi, my name is</div>
+                <div class="content__2">Pierluigi Bertoli</div>
+                <div class="content__3">I'm a Web Developer</div>    
             </div>
         </div>
 
-        <!-- Bio Page -->
-        <div class="page">
-            Piero
-        </div>
+        <div class="home__skill">SKILL</div>
+    </div>
 
-        <!-- Portfolio Page -->
-        <div class="page">
-            Fabo
-        </div>
-
-        <!-- Footer -->
-        <footer class="footer">
-            Cane
-        </footer>
-    </body>
+    <!-- ABAOUT PAGE  -->
+    <div class="about page">CIAO</div>
+</body>
 </html>
