--- a/test/test.html
+++ b/test/test.html
@@ -9,19 +9,18 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="page">
-            <nav class="menu">
-                <div class="menu__dropdown">
-                    <span class="menu__title">Menu</span>
-                    <ul class="menu__list">
-                        <li class="menu__item"><a href="#">Home</a></li>
-                        <li class="menu__item"><a href="#">About</a></li>
-                        <li class="menu__item"><a href="#">Portfolio</a></li>
-                    </ul>
-                </div>
-            </nav>    
-    </div>
-    
+    <ul class="menu">
+        <li class="dropdown"><img src="../assets/icons/form-icon.svg">
+            <ul class="features-menu">
+                <li>
+                    <form action="#"> 
+                        <input type="text" name="#" id="#">
+
+                        <input type="text">
+                    </form>
+                </li>
+            </ul>
+        </li>
+    </ul>
 </body>
 </html>
