--- a/index.html
+++ b/index.html
@@ -36,10 +36,51 @@
             </div>
         </div>
 
-        <div class="home__skill">SKILL</div>
+        <!-- SKILL LIST  -->
+        <div class="home__skill">
+            <div><img class="skill__1" src="assets/icons/html5-icon.svg" alt="html5-icon"></div>
+            <progress class="test-bar" value="50" max="100">50%</progress>
+            <img class="skill__2" src="assets/icons/css3-icon.svg" alt="css3-icon">
+            <img class="skill__3" src="assets/icons/javascript-icon.svg" alt="javascript-icon">
+        </div>
     </div>
 
-    <!-- ABAOUT PAGE  -->
-    <div class="about page">CIAO</div>
+    <!-- ABOUT PAGE  -->
+    <div class="about page">
+        <div class="menu__dummy" style="border: 1px solid blue;"></div>
+
+        <div class="about__container">
+            <img class="about__img" src="assets/img/about-img.jpeg" alt="my-photo">
+            <div>
+                <h3>About Me</h3>
+                <h4>Web Developer</h4>
+                <p>I'm here to provide you my best skills for helping you and your business to improve your
+                    personal and business brand and grant you an impactful window towards external market. <br>
+                    I love challenges facing up to quickly acquiring more and more skills and responsabilities 
+                    growing and learning fast also helped by my curiosity and ability to analyze and solve problems. <br>
+                    I am a very sociable person with excellent and recognized interpersonal and collaboration skills 
+                    together with an empathetic approach.</p>
+            </div>
+            <div>citazione</div>
+        </div>
+
+
+    </div>
+
+    <div class="portfolio page">
+        <div class="menu__dummy" style="border: 1px solid blue;"></div>
+
+        <div class="container">
+            <div class="item">ciao 1</div>
+            <div class="item">ciao 2</div>
+            <div class="item">ciao 2</div>
+            <div class="item">ciao 2</div>
+            <div class="item">ciao 2</div>
+
+        </div>
+
+    </div>
+
+    <footer class="contacts footer"></footer>
 </body>
 </html>
